--- a/styles/s.css
+++ b/styles/s.css
@@ -473,7 +473,7 @@ a{
         opacity: 0.95;
         border-radius: 0px 0px 90px 0px;
         color: rgba(64, 64, 64, 1);
-        font-size: 20px;
+        font-size: 2vh;
         line-height: 15px;
     }
     
